# termgrid

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_CN.md  claude-progress.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/specs/: 2026-03-26-termgrid-design.md
docs/superpowers/plans/: 2026-03-26-termgrid-mvp.md
packaging/homebrew/: termgrid.rb
src/: app.rs  config.rs  event.rs  git.rs  input.rs  layout.rs  lib.rs  main.rs  process.rs  pty.rs  screen.rs  session.rs  tab.rs  tile.rs  tile_manager.rs  tmux.rs
src/ui/: detail_panel.rs  mod.rs  overlay.rs  status_bar.rs  tab_bar.rs  tile_card.rs  title.rs
tests/: integration.rs
