[package]
name = "termgrid"
version = "0.1.0"
edition = "2021"
description = "A multi-terminal manager with Git context awareness"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
portable-pty = "0.9"
vte = "0.15"
git2 = "0.19"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
